VACMS-7649 fix breadcrumb contrast

--- a/docroot/themes/custom/vagovclaro/assets/scss/components/_elements.scss
+++ b/docroot/themes/custom/vagovclaro/assets/scss/components/_elements.scss
@@ -134,3 +134,7 @@ p.vc-help-text {
   top: 4px;
   width: 16px;
 }
+
+.breadcrumb__link:hover {
+  color: var(--color-blue-dark);
+}
